Scrollbar styling fixed, now locks to bottom as well.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,8 @@
   width: 100%;
   left: 0;
   z-index: -1;
-  overflow-y: scroll;
+
+  overflow-y: auto;
 }
 
 .main .main-block{
@@ -97,6 +98,15 @@
   padding-bottom: 81px;
   width: 100%;
   height: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+
+/* 
+  @Hansen: For some reason, only the main class's overflow seems to be working. 
+           I fixed the scrollbar with that in mind. It works now (as well as the auto-scroll).
+*/
+
   /*overflow-x: hidden;*/
   overflow-y: auto;
   white-space: pre-wrap;      /* CSS3 */   
@@ -104,9 +114,6 @@
   white-space: -pre-wrap;     /* Opera <7 */   
   white-space: -o-pre-wrap;   /* Opera 7 */    
   word-wrap: break-word;      /* IE */
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .main .main-block .posts-container::-webkit-scrollbar {
